# simconnect-rust

./: .gitignore  Cargo.toml  License.md  Readme.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
examples/aircraft_inputs/: main.rs
examples/aircraft_updates/: main.rs
examples/aircraft_updates_on_change/: main.rs
examples/connection/: Cargo.toml  main.rs
libsrc/include/: SimConnect.hpp
libsrc/lib/: SimConnect.lib  ltod.lib
src/: lib.rs  main.rs
