[package]
name = "simconnect"
license = "MIT"
description = "Rust bindings for SimConnect"
version = "0.1.3"
authors = ["Connor T <connor0530@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.55"
# Build currently fails on windows with 1.1.0
thread_local = "~1.0.1"