[package]
name = "simconnect"
license = "MIT"
description = "Rust bindings for SimConnect"
version = "0.2.1"
authors = ["Connor T"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "aircraft_updates_on_change_demo"
path = "examples/aircraft_updates_on_change/main.rs"

[[example]]
name = "aircraft_updates"
path = "examples/aircraft_updates/main.rs"


[build-dependencies]
bindgen = "0.65"
